syntax = "proto3";

option csharp_namespace = "GrcpService";
package GrcpService;

service RespondService
{
    rpc Hello(HelloRequest) returns (HelloResponse);

	rpc HelloStream(stream HelloStreamRequest) returns (stream HelloStreamResponse);
}

message HelloRequest
{
	string Text = 1;
}

message HelloResponse
{
	string Text = 1;
}

message HelloStreamRequest
{
	string Guid = 1;
	string Text = 2;
}

message HelloStreamResponse
{
	string Guid = 1;
	string Text = 2;
}